--- a/location/templates/location/main.html
+++ b/location/templates/location/main.html
@@ -11,7 +11,7 @@
     
 </body>
 </html>
-<h1>Your approximate location is {{ ulocation }} and ..... </h1>
+<h1>Your approximate location is :- City : {{ city }} , Zip : {{ zip }} , IP : {{ ip }}</h1>
 
 <button id="find-me">Show my location</button><br />
 <p id="status"></p>
