--- a/weather/templates/home.html
+++ b/weather/templates/home.html
@@ -1,15 +1,100 @@
-<!DOCTYPE html>
+{% load mathfilters %}
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Playfair+Display:wght@500&family=Recursive:wght@900&display=swap"
+            rel="stylesheet">
+
+
+
+    <title>Daily Driver</title>
 </head>
+<style>
+    
+</style>
+
 <body>
-   <h1>Your City is {{city}} and Zip is {{zip}}.</h1>
-   <h2>Current temperature is {{temp}}. Max temperature: {{max_temp}} Min temperature : {{min_temp}} But it feels like {{feels_like}} (Temperature is in degrees)</h2>
-   <h2> Pressure is {{pressure}} and Humidity is {{humidity}}.</h2>
-   <small>Daily Driver Team</small>
+    <div class="container">
+        <center>
+            <h1 style="font-family: 'Recursive', sans-serif;">Weather</h1>
+        </center>
+    <h1 style="font-family: 'Recursive', sans-serif;">City : {{city}}</h1>
+    <h2 style="font-family: 'Playfair Display', serif;">Current temperature : {{temp}} <span>&#176;</span>C
+    </br> Max temperature: {{max_temp}} <span>&#176;</span>C 
+    Min temperature : {{min_temp}} <span>&#176;</span>C </br>
+    Feels like : {{feels_like}} <span>&#176;</span>C
+    Pressure : {{pressure}} "Hg </br>Humidity : {{humidity}} % </h2>
+    <!-- <h1>Calendar Details</h1>
+    
+        {% for i in ourlist %}
+        {% for j in i %}
+        <h3> Summary : {{j}}</h3>
+        <h3> Start time : {{j}}</h3>
+        <h3> End time : {{j}}</h3>
+        <h3> Link : {{j}}</h3>
+    {% endfor %}
+    {% endfor %} -->
+    </br>
+    <h3 style="font-family: 'Exo 2', sans-serif;">Enter Location Manually</h3>
+<form method="GET">
+    <div class="row">
+    <div class="col-md-6">
+        <label for="city"></label>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" id="city" value="{{ request.GET.city }}" placeholder="Enter City" name="city" >
+    </div>
+    <div class="col-md-6">
+    </br>
+    <input type="submit" value="Get Weather" class="btn btn-warning" />
+    </div>
+    </div>
+</form>
+
+<center>
+    <h1 style="font-family: 'Recursive', sans-serif;">News</h1>
+</center>
+
+{% for section in news_final %}
+{% for content in section %}
+<div class="container">
+        {% if 'https' in content %}
+        <a href=" {{content}}" class="btn btn-primary" target="_blank">View Full News</a>
+        
+        {% elif content|length < 120 %} 
+        <h4 style="font-family: 'Playfair Display', serif;">{{content}}</h5>
+        {% else %}
+        <h5 style="font-family: 'Exo 2', sans-serif;">{{content}}</h5>
+        {% endif %}
+</div>
+{% endfor %}
+</br>
+{% endfor %}
+
+
+</div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
 </body>
+
 </html>
