--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% load mathfilters %}
+
 {% load crispy_forms_tags %}
 <!doctype html>
 <html lang="en">
@@ -64,7 +64,7 @@
         <div class="col-md-6">
             </br>
 
-            <input type="submit" value="Update City" class="btn btn-warning" />
+            <input type="submit" value="Update Details" class="btn btn-warning" />
         </div>
     </div>
 </form>
