--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+     <link
+        href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Playfair+Display:wght@500&family=Recursive:wght@900&display=swap"
+        rel="stylesheet">
 
-    <title>Hey{{ user.username}} !</title>
+      <meta http-equiv="refresh" content="60">
+
+    <title>Hey {{ user.username}}!</title>
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
