--- a/templates/todoapp/index.html
+++ b/templates/todoapp/index.html
@@ -5,11 +5,11 @@
 {% block body %}
 <div class="container">
   <center>
-        <h1><i>"{{affirmation}}"</i></h1>
+        <h1 class="animate__animated animate__bounce"><i>"{{affirmation}}"</i></h1>
     </center>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
+        <div class="row ">
+            <div class="col-md-6 ">
                 <center>
                     <h1 style="font-family: 'Recursive', sans-serif;">Weather</h1>
                 </center>
@@ -149,9 +149,9 @@
                     <h2>{{description}}</h2>
                     <h5>{{toss}}</h5>
                     <h5>{{location}} : {{time}}</h5>
-                    <h5>{{team1_name}} : {{team1_score}}</h5>
+                    <h5>{{team1_name}}</h5>
 
-                    <h5>{{team2_name}} : {{team2_score}}</h5>
+                    <h5>{{team2_name}} </h5>
 
                     <a href=" {{link}}" class="btn btn-warning" target="_blank">View Full Scorecard</a>
                 </div>
