--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,11 @@
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Playfair+Display:wght@500&family=Recursive:wght@900&display=swap"
         rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
       <meta http-equiv="refresh" content="60">
 
     <title>Hey {{ user.username}}!</title>
@@ -18,7 +23,7 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Daily Driver</a>
+    <a class="navbar-brand" href="/"><img style="width: 150px;" src="media/terna.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,22 +31,25 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+        <li class="nav-item" style="padding: 20px;">
+          <a class="nav-link btn btn-primary" style="color: aliceblue;" href="/logout">Logout</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
+        <li class="nav-item" style="padding: 20px;">
+          <a class="nav-link btn btn-primary" style="color: aliceblue;" href="/profile">Profile</a>
         </li>
         {% else %}
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">Login</a>
+          <li class="nav-item" style="padding: 20px;">
+            <a class="nav-link btn btn-primary" style="color: aliceblue;" href="/login">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/signup">Signup</a>
+        <li class="nav-item" style="padding: 20px;">
+          <a class="nav-link btn btn-primary" style="color: aliceblue;" href="/signup">Signup</a>
         </li>
         {% endif %}
 
-        
+        <center>
+          <h1 style="padding-left: 400px;padding-top: 15px;font-family: 'Dancing Script';">Daily Driver</h1>
+        </center>
       
       
        
