--- a/templates/todoapp/signup.html
+++ b/templates/todoapp/signup.html
@@ -2,6 +2,7 @@
 {% block title %} Sign Up {% endblock title %}
 {% load crispy_forms_tags %}
 {% block body %}
+<div class="container">
  <div  style="background: linear-gradient(to top right, #ccffcc 0%, #ffff00 100%);border-radius: 10px;box-shadow: 10px 10px 5px grey;;">
     <div class="row">
       <div class="col-lg-6 col-md-12" style="background-color: white;">
@@ -36,5 +37,5 @@
         
     </div>
   </div>
-
+</div>
 {% endblock body %}
