--- a/templates/todoapp/login.html
+++ b/templates/todoapp/login.html
@@ -28,7 +28,7 @@
         </br>
       </br>
           <center>
-            <h2>Need an Account? <a type="button" class="btn btn-primary" href="{% url  'user_signup'  %}">Sign Up</a></h2>
+            <h2 style="color: white;">Need an Account? <a type="button" class="btn btn-primary" href="{% url  'user_signup'  %}">Sign Up</a></h2>
 
           </center>
 
@@ -44,7 +44,7 @@
       </div>
       <div class="col-lg-6 col-md-12 about-title">
         <center>
-          <h2 class="text-uppercase pt-5">
+          <h2 class="text-uppercase pt-5" style="font-family: 'Playfair Display', serif;">
             <span>Login</span>
             
           </h2>
@@ -56,6 +56,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
+          <br>
             <button class="btn btn-outline-info" type="submit">Login</button>
             <small class="text-muted ml-2">
             </small>
