--- a/templates/todoapp/profile.html
+++ b/templates/todoapp/profile.html
@@ -2,8 +2,8 @@
 {% block title %} Profile {% endblock title %}
 {% load crispy_forms_tags %}
 {% block body %}
-<div class="container">
- <div  style="background: linear-gradient(to top right, #ccffcc 0%, #ffff00 100%);border-radius: 10px;box-shadow: 10px 10px 5px grey;;">
+<div class="container" style="padding-top: 50px;">
+ <div  style="background: linear-gradient(to top right, #ccffcc 0%, #ffff00 100%);border-radius: 10px;box-shadow: 10px 10px 5px grey;">
     <div class="row">
       <div class="col-lg-6 col-md-12" style="background-color: white;">
         <div class="about-image">
@@ -14,7 +14,7 @@
       </div>
       <div class="col-lg-6 col-md-12 about-title">
         <center>
-          <h2 class="text-uppercase pt-5">
+          <h2 class="text-uppercase pt-5" style="font-family: 'Playfair Display', serif;">
             <span>Update Profile!</span>
             
           </h2>
@@ -27,6 +27,7 @@
     {{ p_form|crispy }}
     </fieldset>
         <div class="form-group">
+          <br>
             <button class="btn btn-outline-info" type="submit">Update Profile</button>
             <small class="text-muted ml-2">
             </small>
