--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,11 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-      <meta http-equiv="refresh" content="60">
+      <!-- <meta http-equiv="refresh" content="60"> -->
 
     <title>Hey {{ user.username}}!</title>
   </head>
-  <body>
+  <body style="background-color: #5a9ef2;">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"><img style="width: 150px;" src="media/terna.png" alt=""></a>
@@ -45,6 +45,8 @@
         <li class="nav-item" style="padding: 20px;">
           <a class="nav-link btn btn-primary" style="color: aliceblue;" href="/signup">Signup</a>
         </li>
+
+        
         {% endif %}
 
         <center>
