--- a/templates/todoapp/profile.html
+++ b/templates/todoapp/profile.html
@@ -8,7 +8,7 @@
       <div class="col-lg-6 col-md-12" style="background-color: white;">
         <div class="about-image">
         <center>
-          <img style="width:80%;" src="https://image.freepik.com/free-vector/login-concept-illustration_114360-739.jpg" alt="About us" class="img-fluid" >
+          <img style="width:80%;" src="media/profile_update.png" alt="About us" class="img-fluid" >
         </center>
         </div>
       </div>
