--- a/templates/todoapp/signup.html
+++ b/templates/todoapp/signup.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 {% block body %}
 <div class="container">
+<br><br>
  <div  style="background: linear-gradient(to top right, #ccffcc 0%, #ffff00 100%);border-radius: 10px;box-shadow: 10px 10px 5px grey;;">
     <div class="row">
       <div class="col-lg-6 col-md-12" style="background-color: white;">
@@ -26,7 +27,7 @@
     {{form|crispy }}
    </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Login</button>
+            <button class="btn btn-outline-info" type="submit">Sign up!</button>
             <small class="text-muted ml-2">
             </small>
 
