--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-      <meta http-equiv="refresh" content="60">
+      <!-- <meta http-equiv="refresh" content="60"> -->
 
     <title>Hey {{ user.username}}!</title>
   </head>
